# 2023_1_The_Loopers

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
Back/Services/message_broker/: CMakeLists.txt
Back/Services/simultaneous_access/: CMakeLists.txt
Back/utils/authorizer/: CMakeLists.txt
Back/utils/base_service_chassis/: CMakeLists.txt
Back/utils/base_service_chassiss/: CMakeLists.txt
Back/utils/base_service_chassiss/include/: ibase_service_chassis.h
Back/utils/external_service_chassiss/: CMakeLists.txt
Back/utils/server_network/: CMakeLists.txt
Back/utils/service_chassiss_configurators/: CMakeLists.txt
back/utils/service_chassiss_configurators/: CMakeLists.txt
back/utils/token_generator/: CMakeLists.txt
backend/: CMakeLists.txt
backend/services/authorization/: CMakeLists.txt
backend/services/authorization/include/: auth_error.h  auth_handler.h  auth_handler_factory.h  create_handler.h  encrypter.h  hash_and_salt.h  iauth_handler.h  log_in_handler.h
backend/services/authorization/src/: auth_handler.cpp  auth_handler_factory.cpp  create_handler.cpp  encrypter.cpp  log_in_handler.cpp
backend/services/message_broker/: CMakeLists.txt
backend/services/message_broker/include/: message_broker_service.h
backend/services/message_broker/src/: main.cpp  message_broker_service.cpp
backend/services/service_registry/: CMakeLists.txt
backend/services/service_registry/include/: service_registry.h
backend/services/service_registry/src/: main.cpp  service_registry.cpp
backend/services/simultaneous_access/: CMakeLists.txt  readme.md
backend/services/simultaneous_access/include/: simultaneous_access_service.h
backend/services/simultaneous_access/src/: main.cpp  simultaneous_access_service.cpp
backend/services/storage/: CMakeLists.txt
backend/services/storage/include/: Storage.h  file_holder.h  ifile_holder.h  istorage.h  read_file.h  save_changes.h  storage.h
backend/services/storage/src/: file_holder.cpp  main.cpp  read_file.cpp  save_changes.cpp  storage.cpp
backend/utils/authorizer/: CMakeLists.txt
backend/utils/authorizer/include/: iauthorizer.h
backend/utils/authorizer/src/: trash.cpp
backend/utils/base_service_chassis/: CMakeLists.txt
backend/utils/base_service_chassis/include/: ibase_service_chassis.h  ibase_service_chassis_impl.h
backend/utils/base_service_chassis/internal_sessions_manager/: readme.md
backend/utils/base_service_chassiss/: CMakeLists.txt
backend/utils/base_service_chassiss/include/: ibase_service_chassiss.h
backend/utils/db_adapter/: CMakeLists.txt
backend/utils/db_adapter/include/: auth_db_adapter.h  auth_db_controller.h  hash_and_salt.h  iauth_db_controller.h  idb_adapter.h  istorage_db_controller.h  storage_db_adapter.h  storage_db_controller.h  table_after_select.h
backend/utils/db_adapter/src/: auth_db_controller.cpp  idb_adapter.cpp  storage_db_adapter.cpp  storage_db_controller.cpp
backend/utils/external_service_chassis/: CMakeLists.txt
backend/utils/external_service_chassis/include/: iexternal_service_chassis.h
backend/utils/external_service_chassiss/: CMakeLists.txt
backend/utils/external_service_chassiss/include/: iexternal_service_chassis.h
backend/utils/server_network/: CMakeLists.txt
backend/utils/service_chassis_configurators/: CMakeLists.txt
backend/utils/service_chassis_configurators/src/: base_websocket_configurator.cpp
backend/utils/token_generator/: CMakeLists.txt
backend/utils/token_generator/include/: itoken_generator.h
frontend/auth/: CMakeLists.txt  readme.md
frontend/auth/include/: AuthModel.h  AuthModel.hpp  AuthView.h  AuthView.hpp  Encrypter.hpp  LoginView.h  LoginView.hpp
frontend/auth/src/: AuthModel.cpp  AuthView.cpp  LoginView.cpp
frontend/draw/: CMakeLists.txt
frontend/draw/Itool/include/: Ellipse.hpp  Line.hpp  PolygonLine.hpp  PolygonRectangle.hpp  PolygonTriangle.hpp  Rectangle.hpp  TextBlock.hpp  readme.md
frontend/draw/Itool/src/: Ellipse.cpp  Line.cpp  PolygonLine.cpp  PolygonRectangle.cpp  PolygonTriangle.cpp  Rectangle.cpp  TextBlock.cpp
frontend/draw/include/: DrawModel.h  DrawSceneModel.h  DrawUsingQGraphicsView.h  DrawView.h  EllipseItem.h  FreeLineItem.h  GraphicsDrawView.h  IObject.h  LineItem.h  NotDrawView.h  RectangleItem.h  all_items
frontend/draw/src/: DrawModel.cpp  DrawSceneModel.cpp  DrawUsingQGraphicsView.cpp  DrawView.cpp  EllipseItem.cpp  FreeLineItem.cpp  GraphicsDrawView.cpp  IObject.cpp  LineItem.cpp  NotDrawView.cpp  RectangleItem.cpp
frontend/general/: CMakeLists.txt
frontend/general/include/: InklinkMainWindow.h  temp.h
frontend/general/src/: InklinkMainWindow.cpp  main.cpp  temp.cpp
frontend/graph/: CMakeLists.txt
frontend/graph/include/: Edge.h  EdgeView.h  GraphModel.h  GraphView.h  IEdge.h  IGraphModel.h  IVertex.h  Vertex.h  VertexView.h
frontend/graph/src/: Edge.cpp  EdgeView.cpp  GraphModel.cpp  GraphView.cpp  Vertex.cpp  VertexView.cpp
frontend/menu/: CMakeLists.txt
frontend/menu/include/: MenuModel.h  MenuView.h
tests/: CMakeLists.txt
tests/Utilities/SerializerDeserializer/: Serializer.cpp
tests/back/: CMakeLists.txt
tests/back/services/: CMakeLists.txt
tests/backend/: CMakeLists.txt
tests/client/graph/: GraphTests.cpp
tests/client/menu/: MenuModelTests.cpp
tests/utils/client_connector/: test_client_session.cpp
tests/utils/serializer_deserializer/: test_data.cpp
utils/client_connector/: CMakeLists.txt
utils/client_connector/include/: global_websocket_client_session.h  iclient_session.h  manual_websocket_client_session.h  websocket_client_session.h  websocket_fwd.h
utils/client_connector/src/: manual_websocket_client_session.cpp  websocket_client_session.cpp
utils/network_adapter/: CMakeLists.txt
utils/network_adapter/include/: inetwork_adapter.h
utils/serializer_deserializer/: CMakeLists.txt
utils/serializer_deserializer/include/: data_container.h  data_wrapper.h  idata.h  iserializer.h  json_data.h  json_serializer.h
utils/serializer_deserializer/src/: data_container.cpp  data_wrapper.cpp  json_data.cpp  json_serializer.cpp
(+213 files in other folders)
