set(SIMULTANEOUS_ACCESS_SERVICE service_${PROJECT_NAME}_simultaneous_access)

# add_executable(${SIMULTANEOUS_ACCESS_SERVICE} "")
# target_sources(${PROJECT_NAME}
# PRIVATE
# "src/main.cpp"
# "src/solve_hw1.cpp"
# )

# set(PRIVATE_INCLUDE_DIRECTORIES
# "${UTILS_FOLDER}/include"
# )

# target_include_directories(${PROJECT_NAME} PRIVATE ${PRIVATE_INCLUDE_DIRECTORIES})

# set(PRIVATE_LINK_LIBRARIES
# "imdb_top_movies"
# )

# target_link_libraries(${PROJECT_NAME} PRIVATE ${PRIVATE_LINK_LIBRARIES})
