add_library(${CHASSISS_CONFIGURATOR} STATIC "")

target_sources(${CHASSISS_CONFIGURATOR} PRIVATE
    "src/trash.cpp"
)


# set(PRIVATE_INCLUDE_DIRECTORIES
# "${UTILS_DIR}/include"
# )

set(PUBLIC_INCLUDE_DIRECTORIES
    "include"
)

target_include_directories(${CHASSISS_CONFIGURATOR} PUBLIC ${PUBLIC_INCLUDE_DIRECTORIES})

set(PUBLIC_LINK_LIBRARIES
    "${BASE_SERVICE_CHASSISS}"
    "${EXTERNAL_SERVICE_CHASSISS}"
)

target_link_libraries(${CHASSISS_CONFIGURATOR} PUBLIC ${PUBLIC_LINK_LIBRARIES})
